# Traffic-Mgmt

./: CMakeLists.txt  README.md
include/core/: Constants.h  Vehicle.h
include/managers/: FileHandler.h  IntersectionController.h  TrafficManager.h
include/visualization/: DebugOverlay.h  Renderer.h
libs/SDL3_install/include/SDL3/: SDL_revision.h
libs/SDL3_install/lib/cmake/SDL3/: SDL3sharedTargets-relwithdebinfo.cmake
libs/SDL3_install/lib/pkgconfig/: sdl3.pc
src/: main.cpp
src/common/: types.h  vector2d.h
src/core/: TrafficLight.cpp  Vehicle.cpp
src/managers/: FileHandler.cpp  IntersectionController.cpp  TrafficManager.cpp
src/utils/: Queue.cpp
src/visualization/: DebugOverlay.cpp  Renderer.cpp
